--- a/src/main/webapp/static/css/self_defined_setting.css
+++ b/src/main/webapp/static/css/self_defined_setting.css
@@ -53,7 +53,7 @@ body::-webkit-scrollbar-track {-webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.2)
 .navi div{color:black;}
 .header_main_page{cursor: default;padding-left:25px;text-align: left;letter-spacing: 10px;display: inline-block;margin-top: 10px;}
 .subheader_main_page{letter-spacing: 2px;font-size: 10px;margin-bottom: 5px;}
-#heaher{font-family: RBNo2;font-size: 30px;}
+#heaher{font-family: monospace;font-size: 30px;}
 .items{text-align: center;margin-left: auto;margin-right: auto;width: 100px;padding-top: 10px;padding-bottom: 10px}
 .items div{font-size: 15px;}
 .copyright{cursor: default;text-align: center;background-color: rgba(255,255,255,0.6);margin-top: 50px;padding: 20px;color: black}
