--- a/src/main/webapp/static/css/home.css
+++ b/src/main/webapp/static/css/home.css
@@ -1,6 +1,6 @@
 html{height: 100%}
 body{color: #363636}
-.content{display:inline-block;width: 94%;margin-top: 20px;padding-left: 3%;padding-right: 3%;}
+.content{display:inline-block;width: 100%;margin-top: 20px;padding-left: 3%;padding-right: 3%;}
 .content_{display: flex}
 .left_content{width: 29%;margin-right: 10px;}
 .left_content div{background-color: rgba(255,255,255,0.6);margin-bottom: 10px;}
@@ -16,7 +16,7 @@ body{color: #363636}
 .subitem_album h1{text-align: center;padding-top: 10px;font-family: "幼圆"}
 .subitem_album_hr{width: 95%;margin-left: auto;margin-right: auto;margin-top: 8px;margin-bottom: 8px;border: 0.5px solid #363636;}
 #subitem_album{text-align: center;}
-#subitem_album img{width: 90%;padding: 5px}
+#subitem_album img{width: 293px;padding: 5px;height:200px;}
 
 .subitem_message{padding-bottom: 5px;}
 .subitem_message h1{text-align: center;padding-top: 10px;font-family: "幼圆"}
