--- a/src/main/webapp/static/css/self_defined_setting.css
+++ b/src/main/webapp/static/css/self_defined_setting.css
@@ -20,6 +20,11 @@ body{}
 body::-webkit-scrollbar {width: 4px;height: 4px;}
 body::-webkit-scrollbar-thumb {-webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.2);background: #777777;}
 body::-webkit-scrollbar-track {-webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.2);border-radius: 10px;background: #ffffff;}
+
+textarea::-webkit-scrollbar {width: 4px;height: 4px;}
+textarea::-webkit-scrollbar-thumb {-webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.2);background: #777777;}
+textarea::-webkit-scrollbar-track {-webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.2);border-radius: 10px;background: #ffffff;}
+
 .header{cursor: default;padding-left:25px;padding-top:15px;text-align: left;font-size: 75px;font-family: RBNo2;letter-spacing: 10px;display: inline-block;width: 40%;}
 .subheader{letter-spacing: 2px;font-size: 15px;}
 .main{display: flex;width: 100%;}
