--- a/src/main/webapp/static/css/self_defined_setting.css
+++ b/src/main/webapp/static/css/self_defined_setting.css
@@ -1,4 +1,4 @@
-@font-face {/* font-properties */font-family: RBNo2;src:url('./RBNo2Light.otf'),url('./RBNo2Light_a.otf');}
+@font-face {/* font-properties */font-family: RBNo2;src:url('../font/RBNo2Light.otf'),url('../font/RBNo2Light_a.otf');}
 @font-face {/* font-properties */font-family: OstrichSans-Black;src:url('../font/OstrichSans-Black.otf');}
 @font-face {/* font-properties */font-family: OstrichSans-Regular;src:url('../font/OstrichSansInline-Regular.otf');}
 @font-face {/* font-properties */font-family: OstrichSans-Medium;src:url('../font/OstrichSansDashed-Medium.otf');}
@@ -20,6 +20,11 @@ body{}
 body::-webkit-scrollbar {width: 4px;height: 4px;}
 body::-webkit-scrollbar-thumb {-webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.2);background: #777777;}
 body::-webkit-scrollbar-track {-webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.2);border-radius: 10px;background: #ffffff;}
+
+textarea::-webkit-scrollbar {width: 4px;height: 4px;}
+textarea::-webkit-scrollbar-thumb {-webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.2);background: #777777;}
+textarea::-webkit-scrollbar-track {-webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.2);border-radius: 10px;background: #ffffff;}
+
 .header{cursor: default;padding-left:25px;padding-top:15px;text-align: left;font-size: 75px;font-family: RBNo2;letter-spacing: 10px;display: inline-block;width: 40%;}
 .subheader{letter-spacing: 2px;font-size: 15px;}
 .main{display: flex;width: 100%;}
@@ -53,7 +58,7 @@ body::-webkit-scrollbar-track {-webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.2)
 .navi div{color:black;}
 .header_main_page{cursor: default;padding-left:25px;text-align: left;letter-spacing: 10px;display: inline-block;margin-top: 10px;}
 .subheader_main_page{letter-spacing: 2px;font-size: 10px;margin-bottom: 5px;}
-#heaher{font-family: monospace;font-size: 30px;}
+#heaher{font-family: RBNo2;font-size: 30px;}
 .items{text-align: center;margin-left: auto;margin-right: auto;width: 100px;padding-top: 10px;padding-bottom: 10px}
 .items div{font-size: 15px;}
 .copyright{cursor: default;text-align: center;background-color: rgba(255,255,255,0.6);margin-top: 50px;padding: 20px;color: black}
